# bornholdt

./: .autotools  .cproject  .project  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
src/: BornholdtApp.cpp  BornholdtApp.h  BornholdtOptions.cpp  BornholdtOptions.h  CorrelationAccumulator.h  CorrelationObserver.h  EvolutionController.cpp  EvolutionController.h  OFStreamManager.h  Observer.h  ScanController.cpp  ScanController.h  SingleCorrelationObserver.h  StepRepeater.h  Stepper.h  bornholdt.cpp  params.h
src/loggers/: AverageEvolutionLogger.h  Logger.h  ScanLogger.h  SnapshotLogger.h
src/model/: BornholdtModel.cpp  BornholdtModel.h  GraphStateReader.cpp  GraphStateReader.h  GraphStateWriter.cpp  GraphStateWriter.h  edge_states.h
